// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should allow nesting children inside 1`] = `
<Link
  className=""
  to="url"
>
  <div>
    Extra content
  </div>
  <span>
    Label
  </span>
</Link>
`;

exports[`Link should allow to set a custom class to the component 1`] = `
<Link
  className=""
  to="url"
>
  label
</Link>
`;

exports[`Link should render a react-router-dom Link 1`] = `
<Link
  className=""
  to="url"
>
  label
</Link>
`;
